main/default/objects/Jira_Settings__c/Jira_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Jira Settings</label>
</CustomObject>