main/default/objects/Jira_Settings__c/fields/Auto_Generate_Similarity_Labels__c.field-meta.xml
<CustomField>
    <fullName>Auto_Generate_Similarity_Labels__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Generate Similarity Labels</label>
    <type>Checkbox</type>
</CustomField>