main/default/objects/Jira_Settings__c/fields/Automatically_update_Issue_priority__c.field-meta.xml
<CustomField>
    <fullName>Automatically_update_Issue_priority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatically update Issue priority</label>
    <type>Checkbox</type>
</CustomField>