main/default/objects/Jira_Settings__c/fields/Jira_API_Token2__c.field-meta.xml
<CustomField>
    <fullName>Jira_API_Token2__c</fullName>
    <label>Jira API Token2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>