main/default/objects/Jira_Settings__c/fields/Jira_API_Token3__c.field-meta.xml
<CustomField>
    <fullName>Jira_API_Token3__c</fullName>
    <label>Jira API Token3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>