main/default/objects/Jira_Settings__c/fields/Jira_API_Url__c.field-meta.xml
<CustomField>
    <fullName>Jira_API_Url__c</fullName>
    <label>Jira API Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>