main/default/objects/Jira_Settings__c/fields/Jira_Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Jira_Base_Url__c</fullName>
    <label>Jira Base Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>