main/default/objects/Jira_Settings__c/fields/Jira_Details_Field_Length__c.field-meta.xml
<CustomField>
    <fullName>Jira_Details_Field_Length__c</fullName>
    <label>Jira Details Field Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>