main/default/objects/Jira_Settings__c/fields/Synchronize_duplicate_tickets_and_issues__c.field-meta.xml
<CustomField>
    <fullName>Synchronize_duplicate_tickets_and_issues__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synchronize duplicate tickets and issues</label>
    <type>Checkbox</type>
</CustomField>